fixed sizing issues on mobile and attempted to add touchmove functionality

--- a/public/stylesheets/digitalManipulative.css
+++ b/public/stylesheets/digitalManipulative.css
@@ -166,7 +166,7 @@ img {
     min-width: 160px;
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+    z-index: 20;
     border-radius: 4%;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
@@ -187,4 +187,46 @@ img {
 
 .show {
   display:block;
+}
+
+/**************************** MEDIA QUERIES /****************************/
+@media only screen and (max-width: 800px) {
+  .pageInfo {
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas:
+    "cards scoreInfo"
+    "siteInfo siteInfo";
+  }
+
+  .gameBoard h4 {
+    font-size: .5em;
+  }
+
+  #cardSelection {
+    padding-left: 20%;
+  }
+
+  .dropZone .textAnswers {
+    padding: 0;
+    font-size: .5em;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .pageInfo {
+    grid-template-columns: 1fr;
+    grid-template-areas:
+    "cards"
+    "scoreInfo"
+    "siteInfo";
+  }
+
+  .gameBoard h4 {
+    font-size: .5em;
+  }
+
+  .dropZone .textAnswers {
+    padding: 0;
+    font-size: .3em;
+  }
 }
